# Embedded

./: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  platformio.ini
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: started_STM.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
include/: gpio_init.h
lora/: loRa.h  loRa_class.cpp  loRa_class.h
nucleo_initialize/: .cproject  .mxproject  .project  CMakeLists.txt  Makefile  README.md  build.sh  nucleo_initialize.ioc
nucleo_initialize/Inc/: gpio_init.h
nucleo_initialize/Src/: gpio_init.cc  main.c  main.cc
src/: gpio_init.cc  main.c  main.cc
started_STM/: .cproject  .project
